code history for scala

--- a/idea-template.html
+++ b/idea-template.html
@@ -91,7 +91,7 @@
 
         <h4>Commit messages wordcloud</h4>
         Some prepositions and articles are excluded as well as "idea", "ideadev" which are used for issue tracking.
-        The idea is to see what happenes with code by observing human language.
+        The idea is to see what happens with code by observing human language.
         <p id="commit-word-cloud"></p>
         <br/>
 
