--- a/scala-template.html
+++ b/scala-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    <meta name="description" content="JUnit code history"/>
+    <meta name="description" content="Scala code history"/>
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
