--- a/clojure.html
+++ b/clojure.html
@@ -278,7 +278,7 @@
             There is no particular method behind this so if you have a suggestion,
             please feel free to <a href="https://github.com/dkandalov/code-history-mining/issues/new">create an issue</a>.
             (You can find csv file with events and original visualizations
-            <a href="https://drive.google.com/#folders/0B5PfR1lF8o5SNWpwUDZJbERoMEk">here on google drive</a>.)
+            <a href="https://drive.google.com/#folders/0B5PfR1lF8o5SZ1RNUjloYldWeFE">here on google drive</a>.)
         </p>
 
         <h4>Change size chart</h4>
@@ -12130,7 +12130,7 @@ metric\n\
                     .text(function(d) { return d.text; })
                     .on("click", function (d) {
                         if (!d3.event.altKey) return;
-                        excludeWords(d.text);
+                        excludeWords([d.text]);
                         excludeWords(["com", "stu", "signed", "stuart", "thinkrelevance", "halloway"]); normalizeWordSize(data.words);
                         createWordCloud();
                     });
