fixes in rails scrpt; added code-history.js

--- a/rails-template.html
+++ b/rails-template.html
@@ -47,7 +47,7 @@
         <p id="amount-of-committers-chart"></p>
         <br/><br/>
 
-        <h4>Average amount of files in commit</h4>
+        <h4>Amount of files in commit</h4>
         <p id="amount-of-files-in-commit-chart"></p>
         <br/><br/>
 
@@ -112,6 +112,7 @@
 
 <script src="html/d3.v3.min.js"></script>
 <script src="html/d3.layout.cloud.js"></script>
+<script src="html/code-history.js"></script>
 
 
 </body>
