simplifying more scripts

--- a/rails.html
+++ b/rails.html
@@ -25306,7 +25306,7 @@ function createForcesGraphOn(elementId, graph, projectName) {
         Medium: -120,
         High: -50
     };
-    var gravity = gravityValues.Medium;
+    var gravity = gravityValues.Low;
     var minClusterSize = 4;
     var linkValuesExtent = d3.extent(graph.links, function (link) { return link.value; });
     var minLinkStrength = 23;
