--- a/junit.html
+++ b/junit.html
@@ -344,9 +344,8 @@
         Shows commiters connections to files they have both changed within a week.
         That is if file was modified by two persons within a week, a link is added.
         The is idea is to discover how people "communicate" through changing same files.
-        <br/>
-        This particular graph is not very accurate because of different
-        VCS user names for the same person (e.g. "dsaff" and "David Saff").
+        <br/>This particular graph is not very accurate because of different
+     VCS user names for the same person (e.g. "dsaff" and "David Saff").
 
         <p id="author-to-file-graph"></p>
         <br/><br/>
