--- a/template.html
+++ b/template.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    <meta name="description" content="JUnit code history"/>
+    <meta name="description" content="{{project_name}} code history"/>
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>JUnit code history</title>
+    <title>{{project_name}} code history</title>
     <style>
     </style>
 </head>
@@ -18,7 +18,7 @@
 <div id="header_wrap" class="outer" style="max-height: 120px">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/dkandalov/code-history-mining">View on GitHub</a>
-        <h1 id="project_title">JUnit code history</h1>
+        <h1 id="project_title">{{project_name}} code history</h1>
         <h2 id="project_tagline"></h2>
     </header>
 </div>
@@ -27,13 +27,13 @@
 <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
         <p>
-            This is visualization of <a href="https://github.com/junit-team/junit">JUnit</a> project
+            This is visualization of <a href="{{url_to_project_page}}">{{project_name}}</a> project
             code history from January 2001 to September 2013.
             It was made with <a href="https://github.com/dkandalov/code-history-mining">this IntelliJ plugin</a> and some scripts.
             There is no particular method behind this so if you have an idea,
             please feel free to <a href="https://github.com/dkandalov/code-history-mining/issues/new">suggest it</a>.
             (You can find csv file with events and original visualizations
-            <a href="https://drive.google.com/#folders/0B5PfR1lF8o5SbUZzV1RYTC1GcDQ">on google drive</a>.)
+            <a href="{{google_drive_url}}">on google drive</a>.)
         </p>
 
         <h4>Change size chart</h4>
@@ -66,9 +66,7 @@
         Shows commiters connections to files they have both changed within a week.
         That is if file was modified by two persons within a week, a link is added.
         The is idea is to discover how people "communicate" through changing same files.
-        <br/>
-        This particular graph is not very accurate because of different
-        VCS user names for the same person (e.g. "dsaff" and "David Saff").
+        {{{committers_files_graph_comment}}}
 
         <p id="author-to-file-graph"></p>
         <br/><br/>
