--- a/rails-template.html
+++ b/rails-template.html
@@ -37,7 +37,7 @@
         </p>
 
         <h4>Change size chart</h4>
-        Shows amount of commits by day/week/month
+        Shows the amount of commits by day/week/month
         (similar to <a href="https://help.github.com/articles/using-graphs#contributors">github contributors graph</a>
         but without interpolation).
         <p id="change-size-chart"></p>
