ghc code history

--- a/template.html
+++ b/template.html
@@ -27,7 +27,7 @@
 <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
         <p>
-            This is visualization of <a href="{{url_to_project_page}}">{{project_name}}</a> project
+            This is visualization of <a href="{{url_to_project_page}}">{{full_project_name}}</a> project
             code history{{code_history_dates}}.
             It was made with <a href="https://github.com/dkandalov/code-history-mining">this IntelliJ plugin</a> and some scripts.
             There is no particular method behind this so if you have an idea,
