--- a/template.html
+++ b/template.html
@@ -61,6 +61,7 @@
         The idea is to discover de facto dependencies between files.
         <br/>
         You can click on nodes to see file names in cluster.
+        {{{files_graph_comment}}}
         <p id="files-in-the-same-commit"></p>
         <br/><br/>
 
@@ -69,7 +70,6 @@
         That is if file was modified by two persons within a week, a link is added.
         The is idea is to discover how people "communicate" through changing same files.
         {{{committers_files_graph_comment}}}
-
         <p id="author-to-file-graph"></p>
         <br/><br/>
 
