moved most code histories to single template

--- a/ruby.html
+++ b/ruby.html
@@ -305,13 +305,13 @@
 <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
         <p>
-            This is visualization of <a href="https://github.com/ghc/ghc">Ruby programming language</a> project
+            This is visualization of <a href="https://github.com/ruby/ruby">Ruby programming language</a> project
             code history from January 2006 to January 2014.
             It was made with <a href="https://github.com/dkandalov/code-history-mining">this IntelliJ plugin</a> and some scripts.
             There is no particular method behind this so if you have an idea,
             please feel free to <a href="https://github.com/dkandalov/code-history-mining/issues/new">suggest it</a>.
             (You can find csv file with events and original visualizations
-            <a href="https://github.com/ruby/ruby">on google drive</a>.)
+            <a href="https://drive.google.com/#folders/0B5PfR1lF8o5SYnlobWU3eVhOaDg">on google drive</a>.)
         </p>
 
         <h4>Change size chart</h4>
