moved idea history to common template

--- a/template.html
+++ b/template.html
@@ -40,6 +40,7 @@
         Shows the amount of changes by day/week/month. The idea is to see overall trend of the project.
         (Similar to <a href="https://help.github.com/articles/using-graphs#contributors">github contributors graph</a>
         but without interpolation.)
+        {{{change_size_chart_comment}}}
         <p id="change-size-chart"></p>
         <br/><br/>
 
