--- a/template.html
+++ b/template.html
@@ -93,7 +93,7 @@
         <p id="commit-time-punchcard"></p>
         <br/><br/>
 
-        <h4>Time between commits histogram</h4>
+        <h4>Time between commits by the same person</h4>
         This distribution will probably be the same for any project,
         i.e. you are most likely to commit again within 5 hours or at least within a day.
         (Time is tracked separately for each committer.)
