--- a/junit.html
+++ b/junit.html
@@ -318,6 +318,7 @@
         Shows the amount of changes by day/week/month. The idea is to see overall trend of the project.
         (Similar to <a href="https://help.github.com/articles/using-graphs#contributors">github contributors graph</a>
         but without interpolation.)
+        
         <p id="change-size-chart"></p>
         <br/><br/>
 
@@ -371,7 +372,7 @@
         <p id="commit-time-punchcard"></p>
         <br/><br/>
 
-        <h4>Time between commits histogram</h4>
+        <h4>Time between commits by the same person</h4>
         This distribution will probably be the same for any project,
         i.e. you are most likely to commit again within 5 hours or at least within a day.
         (Time is tracked separately for each committer.)
