updated most of visualizations

--- a/template.html
+++ b/template.html
@@ -67,7 +67,7 @@
         <br/><br/>
 
         <h4>Committers changing same files</h4>
-        Shows commiters connections to files they have both changed within a week.
+        Shows committers connections to files they have both changed within a week.
         That is if file was modified by two persons within a week, a link is added.
         The is idea is to discover how people "communicate" through changing same files.
         {{{committers_files_graph_comment}}}
