updated demo of word occurrences chart

--- a/word-occurences/word-occurrences-chart.html
+++ b/word-occurences/word-occurrences-chart.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    <meta name="description" content="{{project_name}} code history"/>
+    <meta name="description" content="Word occurrences chart"/>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/common.css">
