added google analytics to word occurrences page

--- a/word-occurences/word-occurrences-chart.html
+++ b/word-occurences/word-occurrences-chart.html
@@ -68,6 +68,18 @@
     </footer>
 </div>
 
+<script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+    try {
+        var pageTracker = _gat._getTracker("UA-56523002-1");
+        pageTracker._trackPageview();
+    } catch (err) {
+    }
+</script>
+
 <script src="d3.v3.min.js"></script>
 <script src="underscore-min.js"></script>
 <script src="common.js"></script>
