--- a/word-occurences/word-occurrences-chart.html
+++ b/word-occurences/word-occurrences-chart.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    <meta name="description" content="Word occurrences chart"/>
+    <meta name="description" content="Word occurrences in commit message"/>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/common.css">
@@ -21,7 +21,7 @@
 <!-- HEADER -->
 <div id="header_wrap" class="outer" style="max-height: 120px">
     <header class="inner">
-        <h1 id="project_title">Amount of words in commit message</h1>
+        <h1 id="project_title">Word occurrences in commit message</h1>
         <h2 id="project_tagline"></h2>
     </header>
 </div>
