--- a/commits-by-author-chart/index.html
+++ b/commits-by-author-chart/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    <meta name="description" content="{{project-name}} code history"/>
+    <meta name="description" content="Amounts of commits by author"/>
 
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/sticky-footer.css">
